--- a/mall-coupon/src/main/resources/application.yml
+++ b/mall-coupon/src/main/resources/application.yml
@@ -5,9 +5,12 @@ spring:
     url: jdbc:mysql://192.168.56.10:3306/mall_sms?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
     driver-class-name: com.mysql.jdbc.Driver
 # MapperScan
-# sqlÓ³ÉäÎÄ¼şÎ»ÖÃ
+# sqlæ˜ å°„æ–‡ä»¶ä½ç½®
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
   global-config:
     db-config:
       id-type: auto
+
+server:
+  port: 7000
