--- a/mall-member/src/main/resources/application.yml
+++ b/mall-member/src/main/resources/application.yml
@@ -4,6 +4,12 @@ spring:
     password: root
     url: jdbc:mysql://192.168.56.10:3306/mall_ums?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
     driver-class-name: com.mysql.jdbc.Driver
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+  application:
+    name: mall-member
 # MapperScan
 # sql”≥…‰Œƒº˛Œª÷√
 mybatis-plus:
@@ -11,3 +17,5 @@ mybatis-plus:
   global-config:
     db-config:
       id-type: auto
+server:
+  port: 8001
