SpringCloud Alibaba finish

--- a/mall-common/pom.xml
+++ b/mall-common/pom.xml
@@ -78,6 +78,12 @@
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         </dependency>
+<!--        &lt;!&ndash; 若bootstrap配置不生效，加入以下依赖 &ndash;&gt;-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bootstrap</artifactId>
+            <version>3.0.1</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
