--- a/mall-gateway/src/main/resources/application.yml
+++ b/mall-gateway/src/main/resources/application.yml
@@ -3,46 +3,18 @@ spring:
     gateway:
       routes:
         - id: test_route
-          uri: https://www.baidu.com
+          uri: http://www.baidu.com
           predicates:
-            - Query=url,baidu
-
-        - id: qq_route
-          uri: https://www.qq.com
-          predicates:
-            - Query=url,qq
-
+            - Query=url, baidu
         - id: product_route
-          uri: lb://gulimall-product
+          uri: lb://mall-product
           predicates:
             - Path=/api/product/**
           filters:
-            - RewritePath=/api/(?<segment>.*),/$\{segment}
-
-        - id: third_party_route
-          uri: lb://gulimall-third-party
-          predicates:
-            - Path=/api/thirdparty/**
-          filters:
-            - RewritePath=/api/thirdparty/(?<segment>.*),/$\{segment}
-
-        - id: member_route
-          uri: lb://gulimall-member
-          predicates:
-            - Path=/api/member/**
-          filters:
-            - RewritePath=/api/(?<segment>.*),/$\{segment}
-
-        - id: ware_route
-          uri: lb://gulimall-ware
-          predicates:
-            - Path=/api/ware/**
-          filters:
-            - RewritePath=/api/(?<segment>.*),/$\{segment}
-
+            - RewritePath=/api/product/(?<segment>.*),/product/$\{segment}
         - id: admin_route
           uri: lb://renren-fast
           predicates:
             - Path=/api/**
-          filters:  # 这段过滤器和验证码有关，api内容缓存了/renren-fast，还得注意/renren-fast也注册到nacos中
+          filters:
             - RewritePath=/api/(?<segment>.*),/renren-fast/$\{segment}
