--- a/mall-auth-server/src/main/resources/application.yml
+++ b/mall-auth-server/src/main/resources/application.yml
@@ -5,5 +5,9 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
+  redis:
+    host: 192.168.56.10
+    port: 6379
 server:
   port: 20000
+
