--- a/mall-third-party/pom.xml
+++ b/mall-third-party/pom.xml
@@ -33,6 +33,12 @@
             <artifactId>spring-cloud-starter-alicloud-oss</artifactId>
             <version>2.1.1.RELEASE</version>
         </dependency>
+        <!--  短信服务   -->
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>dysmsapi20170525</artifactId>
+            <version>2.0.8</version>
+        </dependency>
 
         <!-- mall-common -->
         <dependency>
