--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
 
         <module>mall-search</module>
         <module>mall-auth-server</module>
+        <module>mall-cart</module>
+
+        <module>mall-test-sso-server</module>
+        <module>mall-test-sso-client</module>
+        <module>mall-test-sso-client2</module>
     </modules>
 
 </project>
