--- a/mall-ware/src/main/resources/application.yml
+++ b/mall-ware/src/main/resources/application.yml
@@ -10,6 +10,10 @@ spring:
         server-addr: 127.0.0.1:8848
   application:
     name: mall-ware
+  rabbitmq:
+    host: 192.168.56.10
+    virtual-host: /
+
 # MapperScan
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
@@ -21,3 +25,4 @@ server:
 logging:
   level:
     top.gumt.mall.*: debug
+
