--- a/mall-member/src/main/resources/application.yml
+++ b/mall-member/src/main/resources/application.yml
@@ -10,6 +10,9 @@ spring:
         server-addr: 127.0.0.1:8848
   application:
     name: mall-member
+  redis:
+    host: 192.168.56.10
+    port: 6379
 # MapperScan
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
