--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 
         <module>mall-search</module>
         <module>mall-cart</module>
+        <module>mall-seckill</module>
 
         <module>mall-test-sso-server</module>
         <module>mall-test-sso-client</module>
