--- a/mall-auth-server/src/main/resources/application.yml
+++ b/mall-auth-server/src/main/resources/application.yml
@@ -1,13 +1,31 @@
 spring:
-  applic·ation:
+  zipkin:
+    base-url: http://192.168.56.10:9411/
+    discovery-client-enabled: false
+    sender:
+      type: web
+  sleuth:
+    sampler:
+      probability: 1
+  application:
     name: mall-auth-server
   cloud:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
+    sentinel:
+      transport:
+        port: 8719
+        dashboard: localhost:8080
   redis:
     host: 192.168.56.10
     port: 6379
 server:
   port: 20000
 
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
