--- a/mall-cart/src/main/resources/application.yml
+++ b/mall-cart/src/main/resources/application.yml
@@ -1,9 +1,21 @@
 server:
   port: 30000
 spring:
+  zipkin:
+    base-url: http://192.168.56.10:9411/
+    discovery-client-enabled: false
+    sender:
+      type: web
+  sleuth:
+    sampler:
+      probability: 1
   cloud:
     nacos:
-      server-addr: 127.0.0.1:8848
+      server-addr: localhost:8848
+    sentinel:
+      transport:
+        dashboard: localhost:8080
+        port: 8719
   application:
     name: mall-cart
   redis:
@@ -17,3 +29,9 @@ mall:
     core-size: 20
     max-size: 200
     keep-alive-time: 10
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
