--- a/mall-gateway/pom.xml
+++ b/mall-gateway/pom.xml
@@ -25,6 +25,12 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
+        <!-- 引入sentinel网关限流 -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-alibaba-sentinel-gateway</artifactId>
+            <version>2021.1</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
