--- a/mall-gateway/src/main/resources/application.properties
+++ b/mall-gateway/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 spring.application.name=mall-gateway
 server.port=88
+
+# zipkin 服务器地址
+#spring.zipkin.base-url=http://192.168.56.10:9411/
+# 关闭服务器发现，否者Spring cloud 会把 zipkin 的 url 当做服务名称
+#spring.zipkin.discovery-client-enabled=false
+# 设置使用http的方式传输数据
+#spring.zipkin.sender.type=web
+# 设置抽样采集率 为 100% 默认的值为0.1 即10%
+#spring.sleuth.sampler.probability=1
