--- a/mall-member/src/main/resources/application.yml
+++ b/mall-member/src/main/resources/application.yml
@@ -1,4 +1,12 @@
 spring:
+  zipkin:
+    base-url: http://192.168.56.10:9411/
+    discovery-client-enabled: false
+    sender:
+      type: web
+  sleuth:
+    sampler:
+      probability: 1
   datasource:
     username: root
     password: root
@@ -7,7 +15,11 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 127.0.0.1:8848
+        server-addr: localhost:8848
+    sentinel:
+      transport:
+        dashboard: localhost:8080
+        port: 8719
   application:
     name: mall-member
   redis:
