--- a/mall-seckill/src/main/resources/application.yml
+++ b/mall-seckill/src/main/resources/application.yml
@@ -1,6 +1,14 @@
 server:
   port: 15000
 spring:
+  zipkin:
+    base-url: http://192.168.56.10:9411/
+    discovery-client-enabled: false
+    sender:
+      type: web
+  sleuth:
+    sampler:
+      probability: 1
   redis:
     host: 192.168.56.10
     port: 6379
@@ -18,5 +26,14 @@ spring:
   cloud:
     nacos:
       server-addr: 127.0.0.1:8848
+    sentinel:
+      transport:
+        dashboard: localhost:8080
+        port: 8719
 
 ipAddr: 192.168.56.10
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
