--- a/mall-third-party/src/main/resources/bootstrap.properties
+++ b/mall-third-party/src/main/resources/bootstrap.properties
@@ -4,3 +4,12 @@ spring.cloud.nacos.config.namespace=a5a9ae3f-0d31-4bcb-b73a-dfe2ecbf7eab
 spring.cloud.nacos.config.extension-configs[0].data-id=oss.yml
 spring.cloud.nacos.config.extension-configs[0].group=DEFAULT_GROUP
 spring.cloud.nacos.config.extension-configs[0].refresh=true
+
+# zipkin 服务器地址
+spring.zipkin.base-url=http://192.168.56.10:9411/
+# 关闭服务器发现，否者Spring cloud 会把 zipkin 的 url 当做服务名称
+spring.zipkin.discovery-client-enabled=false
+# 设置使用http的方式传输数据
+spring.zipkin.sender.type=web
+# 设置抽样采集率 为 100% 默认的值为0.1 即10%
+spring.sleuth.sampler.probability=1
